projects/vb6parse/snapshots/parsers/cst/declarations/variables/dim_private_const.snap
---
source: projects/vb6parse/tests/declarations/variables.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DimStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: ConstKeyword
          text: Const
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: MODULE_NAME
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"MyModule\""
        - kind: Newline
          text: "\n"
