projects/vb6parse/snapshots/parsers/cst/declarations/variables/private_variable_byte.snap
---
source: projects/vb6parse/tests/declarations/variables.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DimStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: m_flags
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: ByteKeyword
          text: Byte
        - kind: Newline
          text: "\n"
